# face-ai-service

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: download_models.py
src/face_ai_service/: app.py  config.py
src/face_ai_service/api/: error_handlers.py
src/face_ai_service/api/v1/: __init__.py  face_routes.py  health_routes.py
src/face_ai_service/core/: inference_engine.py
src/face_ai_service/logging/: __init__.py  request_logging.py  traceable.py
src/face_ai_service/models/facenet/: facenet.py  inception_resnetv1.py  mobilenet.py
src/face_ai_service/models/retinaface/: layers.py  mobilenet025.py  retinaface.py
src/face_ai_service/schemas/: exceptions.py  messages.py  requests.py  responses.py
src/face_ai_service/storage/: model_store.py
src/face_ai_service/utils/: anchor_utils.py  bbox_utils.py  face_utils.py  image_helpers.py  logging_config.py  model_config.py  request_context.py
tests/: conftest.py
tests/integration/: test_face_routes.py
tests/unit/: test_image_helpers.py  test_inference_engine.py  test_schemas.py
